Fix typos and refactor duplicated property in i18n resources.

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -26,7 +26,7 @@
 ## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
 
 accept = Accept
-active = Active
+is.active = Active
 add = Add
 administrator = Administrator
 apply = Apply
@@ -143,7 +143,7 @@ checkbox.enable.emoticons = E&nable emoticons
 checkbox.graying.out = Dim idle contacts (requires restart)
 checkbox.idle.enabled = &Idle enabled
 checkbox.launch.on.startup = &Launch on startup
-checkbox.reconnet.info = Specify reconnection display:
+checkbox.reconnect.info = Specify reconnection display:
 checkbox.reconnect.panel.big = Display as Panel
 checkbox.reconnect.panel.small = Display in contact group
 checkbox.reconnect.panel.icon = Display as icon
@@ -458,7 +458,7 @@ menuitem.refresh = Refresh
 menuitem.create.room = Create or join room
 menuitem.expand.all.groups = Expand all groups
 menuitem.collapse.all.groups = Collapse all groups
-menuitem.inivite.again = Invite again
+menuitem.invite.again = Invite again
 menuitem.chatframe.option = Options
 menuitem.add.groupchat.invitetobookmark = Automatically invite users to bookmarked room
 menuitem.certificate.files.filter = Certificates files (*.cer), (*.crt), (*.der)
@@ -477,7 +477,7 @@ message.add.user = Add user to your roster?
 message.alert.notify = Alert notification
 message.already.exists = Account already exists, please try a different username
 message.approve.subscription = Allow {0} to add you to their roster?
-message.autenticating = Authenticating
+message.authenticating = Authenticating
 message.away.idle = Away due to idle
 message.bookmark.temporary.room.error = You cannot bookmark temporary rooms
 message.broadcast.from = Broadcast from {0}
@@ -485,7 +485,7 @@ message.broadcast.no.user.selected = Please select at least one recipient
 message.broadcast.no.text = Please enter text to broadcast
 message.broadcast.message.sent = The broadcast message has been sent
 message.broadcast.to = Enter message to broadcast to {0}
-message.broadcasted.to = The message has been broadcasted to the following users\:\n{0}
+message.hasbeenbroadcast.to = The message has been broadcast to the following users\:\n{0}
 message.buzz.alert.notification = Get the user's attention
 message.buzz.message = {0} wants your attention
 message.buzz.sent = Requested users attention
@@ -559,7 +559,7 @@ message.file.transfer.cantwritedir = Can't write to the directory for file trans
 message.file.transfer.notification = File transfer notification
 message.file.transfer.short.message = is sending you a file called\:
 message.file.transfer.chat.window = File transfer request:
-message.file.transfer.file.too.big.error = The selected file is too big.\nThe maximum filezise is {0} the selected file has {1}
+message.file.transfer.file.too.big.error = The selected file is too big.\nThe maximum file size is {0} the selected file has {1}
 message.file.transfer.file.too.big.warning = The selected file is too big.\nProceed anyway?
 message.file.transfer.direrror.setdir = Click here to change the directory
 message.find.conference.services = Find conference services
@@ -652,7 +652,7 @@ message.server.unavailable = Can't connect to server: invalid name or server not
 message.service.already.exists = Service is already in your service list
 message.shared.group = Shared group
 message.spark.secure = Spark is running in secure mode
-message.spark.unsecure = Spark is not running in secure mode (the connection to the server is not encrypted).
+message.spark.insecure = Spark is not running in secure mode (the connection to the server is not encrypted).
 message.specify.contact.jid = Please specify the contact JID (ex. ddman@jabber.org)
 message.specify.group = Specify contact group to add the new user to
 message.specify.information.for.conference = Specify information for conference room
@@ -724,7 +724,7 @@ message.groupchat.require.password = This group chat room requires a password to
 message.groupchat.registered.member = Successfully registered with {0}
 message.search.for.history = Search conversation history
 message.search.period.month.one = one month per page
-message.search.period.year.one = one year per page 
+message.search.period.year.one = one year per page
 message.search.period.none = show all on one page
 message.search.page.timeperiod = choose the timespan of messages, which are displayed per page
 message.search.page.counter = the current index of your page and the amount of all pages
@@ -811,7 +811,7 @@ title.edit.custom.message = Edit custom messages
 title.edit.profile = Edit profile information
 title.enter.reason = Enter reason
 title.error = Error
-title.error.couldnt.open.file = Could not open the file
+title.error.couldnot.open.file = Could not open the file
 title.error.delete.file = Could not delete file
 title.error.find.app = Could not find a matching application
 title.error.rename.file = Could not rename the file
@@ -910,7 +910,7 @@ tooltip.start.chat = Start a conversation
 tooltip.view.changelog = View change log
 tooltip.view.history = View conversation history
 tooltip.view.readme = View readme
-tooltip.encryptionmode.required = Encryption is required in order to connect. If the server does not offer encryption, or if the encryption negotiaton fails, the connection to the server will fail.
+tooltip.encryptionmode.required = Encryption is required in order to connect. If the server does not offer encryption, or if the encryption negotiation fails, the connection to the server will fail.
 tooltip.encryptionmode.ifpossible = Encryption is used whenever it's available.
 tooltip.encryptionmode.disabled = Encryption is disabled and only non-encrypted connections will be used. If encryption is required by the server, the connection will fail.
 
@@ -937,10 +937,10 @@ privacy.label.pin.desc = Presence in
 privacy.label.pout.desc = Presence out
 privacy.label.msg.desc = Messages
 privacy.border.information = Privacy Information
-privacy.label.information = Use right click menu to add or delete lists or items 
+privacy.label.information = Use right click menu to add or delete lists or items
 privacy.root.node = Privacy Lists
 privacy.label.preferences = Privacy Plugin
-pricacy.tooltip.preferences = Spark privacy settings
+privacy.tooltip.preferences = Spark privacy settings
 privacy.label.list.is.active = Current active list:
 privacy.label.list.is.default = Default list:
 privacy.border.block = Block
@@ -962,7 +962,7 @@ privacy.status.menu.entry = Privacy Lists
 privacy.name.for.default.list = Default
 privacy.button.no.list.selected = No list selected
 privacy.menuitem.deactivate.current.list = Deactivate {0}
-privacy.label.not.supported = Privacy lists are not supported by server. 
+privacy.label.not.supported = Privacy lists are not supported by server.
 
 ##Stunfallback in media settings
 stun.border.label = STUN fallback server
@@ -998,7 +998,7 @@ dialog.certificate.sure.to.delete = Are you sure that you want to delete this ce
 dialog.certificate.has.been.deleted = Certificate has been successfully deleted.
 dialog.self.signed.certificate.has.been.created = Self signed certificate and private key have been created in directory: \n
 dialog.certificate.request.has.been.created = Certificate Sign Request and private key have been created in directory: \n
-dialog.cannot.upload.certificate.might.be.ill.formated = Cannot upload certificate file, certificate might be ill formatted
+dialog.cannot.upload.certificate.might.be.ill.formatted = Cannot upload certificate file, certificate might be ill formatted
 dialog.cannot.upload.certificate = Cannot upload certificate file
 dialog.certificate.title.certificate.not.in.truststore = Provided certificate is not in your TrustStore
 
@@ -1007,12 +1007,12 @@ cert.revoked = Revoked
 cert.expired = Expired
 cert.not.valid.yet = Not valid yet
 cert.self.signed = Self signed
-cert.sign.request = Certificate Signing Request 
+cert.sign.request = Certificate Signing Request
 cert.self.signed.save.to.file = Save certificate to file
 cert.unknown.oid = Unknown OID description.
-cert.is.critical = Is critical: 
+cert.is.critical = Is critical:
 cert.critical = Critical:
-cert.not.critical = Not critical: 
+cert.not.critical = Not critical:
 cert.common.name = Common name
 cert.organization.unit = Organization unit
 cert.organization = Organization
@@ -1114,18 +1114,18 @@ cert.extension.name.constraints.excluded.subtrees = Excluded subtrees
 1.3.6.1.5.5.7.3.1 = Certificate can be used as a Secure Sockets Layer (SSL) server certificate.
 1.3.6.1.5.5.7.3.2 = Certificate can be used as a Secure Sockets Layer (SSL) client certificate.
 1.3.6.1.5.5.7.3.3 = Certificate can be used for code signing.
-1.3.6.1.5.5.7.3.4 = Certificate can be used for protecting email (signing, encryption, key agreement). 
-1.3.6.1.5.5.7.3.5 = Internet Protocol SECurity (IPSEC) end system certificate. 
-1.3.6.1.5.5.7.3.6 = Internet Protocol SECurity (IPSEC) tunnel certificate. 
+1.3.6.1.5.5.7.3.4 = Certificate can be used for protecting email (signing, encryption, key agreement).
+1.3.6.1.5.5.7.3.5 = Internet Protocol SECurity (IPSEC) end system certificate.
+1.3.6.1.5.5.7.3.6 = Internet Protocol SECurity (IPSEC) tunnel certificate.
 1.3.6.1.5.5.7.3.7 = Internet Protocol SECurity (IPSEC) user certificate.
 1.3.6.1.5.5.7.3.8 = PKIX key purpose time stamping. Certificate can be used to bind the hash of an object to a time from a trusted time source.
 
 1.3.6.1.5.5.7.3.9 = Rec. ITU-T X.509 certificates corresponding private key may be used by an authority to sign OCSP-Responses.
 1.3.6.1.5.5.7.3.10 = PKIX key purpose Data Validation and Certification Server Protocols.
-1.3.6.1.5.5.7.3.11 = sbgpCertAAServerAuth. 
+1.3.6.1.5.5.7.3.11 = sbgpCertAAServerAuth.
 1.3.6.1.5.5.7.3.12 = id-kp-scvp-responder key purpose.
 1.3.6.1.5.5.7.3.13 = id-kp-eapOverPPP
 
-1.3.6.1.5.5.7.1.12 = id-pe-logotype 
+1.3.6.1.5.5.7.1.12 = id-pe-logotype
 1.3.6.1.4.1.311.10.3.4 = Automatically extracted from Object IDs Associated with Microsoft Cryptography.
 2.23.42.7.0 = Hashed Root Key
