--- a/core/src/main/resources/i18n/spark_i18n_cs.properties
+++ b/core/src/main/resources/i18n/spark_i18n_cs.properties
@@ -44,7 +44,7 @@ reject = Odmítnout
 open = Otevřít
 open.folder = Otevřít složku
 retry = Opakovat
-active = Aktivní
+is.active = Aktivní
 not.registered = Není registrován
 save = Uložit
 yes = Ano
@@ -324,7 +324,7 @@ message.broadcast.from = Hromadná zpráva od {0}
 message.enter.message.to.broadcast = Zadejte zprávu na rozeslání do celého vašeho seznamu.
 message.broadcast.message.sent = Hromadná zpráva byla poslána.
 message.broadcast.to = Zadej zprávu na hromadné zaslání {0}
-message.broadcasted.to = Zpráva byla rozeslána těmto uživatelům:\n{0}
+message.hasbeenbroadcast.to = Zpráva byla rozeslána těmto uživatelům:\n{0}
 message.user.now.available.to.chat = {0} je online v {1}
 message.user.is.sending.you.a.file = {0} posílá vám soubor.
 message.file.transfer.canceled = Zrušil jste přenos souboru.
@@ -396,7 +396,7 @@ message.restart.spark.to.install = Budete potřebovat vypnout klienta pro instal
 message.add.to.roster = Přidat do seznamu
 message.enter.room.password = Zadejte heslo do místnosti
 message.add.contact.to.list = Přidat uživatele do vašeho senzamu kontaktů
-message.autenticating = Autentikace
+message.authenticating = Autentikace
 message.invalid.status = Zadejte platnou zprávu stavu.
 message.cannot.add.contact.to.shared.group = Nemůžete přidávat nové kontakty do sdílene skupiny.
 message.specify.contact.jid = Prosím zadejte JID kontaktu (např. ddman@jabber.org)
