--- a/core/src/main/resources/i18n/spark_i18n_de.properties
+++ b/core/src/main/resources/i18n/spark_i18n_de.properties
@@ -26,7 +26,7 @@
 ## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
 
 accept = Akzeptieren
-active = Aktiv
+is.active = Aktiv
 add = Hinzufügen
 administrator = Administrator
 apply = Übernehmen
@@ -132,7 +132,7 @@ checkbox.enable.emoticons = &Emoticons aktivieren
 checkbox.graying.out = Nichtstuende Kontakte ausgrauen (benötigt Neustart von Spark)
 checkbox.idle.enabled = &Automatisches 'Away' bei Inaktivität aktivieren
 checkbox.launch.on.startup = &Spark bei Systemstart ausführen
-checkbox.reconnet.info = Art des Wiederverbindens:
+checkbox.reconnect.info = Art des Wiederverbindens:
 checkbox.reconnect.panel.big = Zeige ein Panel
 checkbox.reconnect.panel.small = Zeige eine Gruppe
 checkbox.reconnect.panel.icon = Zeige ein Icon
@@ -412,7 +412,7 @@ menuitem.refresh = Aktualisieren
 menuitem.create.room = Raum erstellen oder beitreten
 menuitem.expand.all.groups = Alle Gruppen öffnen
 menuitem.collapse.all.groups = Alle Gruppen schließen
-menuitem.inivite.again = Nochmals einladen
+menuitem.invite.again = Nochmals einladen
 menuitem.chatframe.option = Einstellungen
 menuitem.add.groupchat.invitetobookmark = Benutzer automatisch zu Raum aus den Lesezeichen einladen
 
@@ -542,7 +542,7 @@ message.broadcast.no.text = Bitte Text für die Rundnachricht eingeben
 message.enter.message.to.broadcast = Eine Nachricht an alle Teilnehmer Ihrer Kontaktliste senden.
 message.broadcast.message.sent = Die Rundnachricht wurde versendet.
 message.broadcast.to = Eine Rundnachricht eingeben für {0}
-message.broadcasted.to = Die Nachricht wurde gesendet an:\n{0}
+message.hasbeenbroadcast.to = Die Nachricht wurde gesendet an:\n{0}
 message.user.now.available.to.chat = {0} ist online seit {1}
 message.user.is.sending.you.a.file = {0} sendet Ihnen eine Datei.
 message.file.transfer.canceled = Sie haben den Dateitransfer abgebrochen.
@@ -617,7 +617,7 @@ message.restart.spark.to.install = Das Programm muss beendet werden, um eine Ver
 message.add.to.roster = Zur Kontaktliste hinzufügen
 message.enter.room.password = Passwort für diesen Raum eingeben
 message.add.contact.to.list = Teilnehmer zur Kontaktliste hinzufügen
-message.autenticating = Authentifizierung
+message.authenticating = Authentifizierung
 message.invalid.status = Bitte eine gültige Statusnachricht eingeben.
 message.cannot.add.contact.to.shared.group = Es können keine neue Kontakte zu der Gruppe hinzugefügt werden.
 message.specify.contact.jid = Bitte die JID des Kontakts eingeben (bsp. jemand@jabber.org)
@@ -747,7 +747,7 @@ title.error.rename.file = Datei konnte nicht umbenannt werden!
 title.file = Datei
 title.filesize = Dateigröße
 title.error.delete.file = Datei konnte nicht gelöscht werden!
-title.error.couldnt.open.file = Datei konnte nicht geöffnet werden! Eventuell Dateityp unbekannt!
+title.error.couldnot.open.file = Datei konnte nicht geöffnet werden! Eventuell Dateityp unbekannt!
 title.bookmarks = Lesezeichen
 title.task.notification = Aufgabenbenachrichtigung
 status.away = Abwesend
@@ -854,7 +854,7 @@ privacy.border.information = Legende
 privacy.label.information = Benutzen Sie die rechte Maustaste, um Elemente hinzuzufügen oder zu entfernen
 privacy.root.node = Privatsphärelisten
 privacy.label.preferences = Privatsphäre
-pricacy.tooltip.preferences = Spark-Privatsphäreeinstellungen
+privacy.tooltip.preferences = Spark-Privatsphäreeinstellungen
 privacy.label.list.is.active = Aktuell aktive Liste:
 privacy.label.list.is.default = Standardliste:
 privacy.border.block = Sperren
