--- a/core/src/main/resources/i18n/spark_i18n_es.properties
+++ b/core/src/main/resources/i18n/spark_i18n_es.properties
@@ -38,7 +38,7 @@ action.paste = Pegar
 action.print = Imprimir
 action.save = Guardar
 action.select.all = Seleccionar todo
-active = Activar
+is.active = Activar
 add = Agregar
 apply = Aplicar
 available = Disponible
@@ -341,13 +341,13 @@ message.add.user = ¿Desea agregar el usuario a su lista de contactos?
 message.alert.notify = Notificación de alerta
 message.already.exists = La cuenta ya existe. Intente con otro nombre de usuario.
 message.approve.subscription = ¿Permitir a {0} que lo agregue a su lista de contactos?
-message.autenticating = Autenticando
+message.authenticating = Autenticando
 message.away.idle = Ausente por inactividad.
 message.bookmark.temporary.room.error = No se pueden guardar cuartos temporales como favoritos
 message.broadcast.from = Difusión enviada por {0}
 message.broadcast.message.sent = El mensaje para difundir ha sido enviado.
 message.broadcast.to = Ingrese el mensaje para difundir a {0}
-message.broadcasted.to = El mensaje a sido enviado a los siguientes usuarios:\n{0}
+message.hasbeenbroadcast.to = El mensaje a sido enviado a los siguientes usuarios:\n{0}
 message.buzz.alert.notification = Obtener la atención del usuario.
 message.buzz.sent = Enviar notificaciones de alertas al usuario.
 message.calling = Llamando {0}
@@ -630,7 +630,7 @@ title.edit.custom.message = Editar mensajes personalizados
 title.edit.profile = Editar información de perfil
 title.enter.reason = Ingresar motivo
 title.error = Error
-title.error.couldnt.open.file = ¡No se pudo abrir el archivo! Posiblemente un tipo de archivos desconocido.
+title.error.couldnot.open.file = ¡No se pudo abrir el archivo! Posiblemente un tipo de archivos desconocido.
 title.error.delete.file = ¡No se pudo eliminar el archivo!
 title.error.find.app = ¡No se pudo encontrar la aplicación!
 title.error.rename.file = ¡No se pudo renombrar el archivo!
@@ -765,7 +765,7 @@ menuitem.block.contact = Block contact
 menuitem.unblock.contact = Unblock contact
 menuitem.expand.all.groups = Expand all groups
 menuitem.collapse.all.groups = Collapse all groups
-menuitem.inivite.again = Invite again
+menuitem.invite.again = Invite again
 menuitem.chatframe.option = Options
 message.invite.to.groupchat = {0} is inviting you to join a group chat
 message.enter.sametime = Enter your Sametime username and password below
