--- a/core/src/main/resources/i18n/spark_i18n_fi.properties
+++ b/core/src/main/resources/i18n/spark_i18n_fi.properties
@@ -50,7 +50,7 @@ open = Avaa
 open.folder = Avaa kansio
 participants = Osallistujat
 retry = Yritä uudelleen
-active = Aktiivinen
+is.active = Aktiivinen
 not.registered = Ei rekisteröitynyt
 save = Tallenna
 unfiled = Luokittelematon
@@ -397,7 +397,7 @@ message.broadcast.from = Kuulutus henkilöltä {0}
 message.enter.message.to.broadcast = Kirjoita viesti, joka kuulutetaan kaikille kontakteillesi.
 message.broadcast.message.sent = Kuulutus lähetetty
 message.broadcast.to = Kirjoita {0}:lle kuulutettava viesti
-message.broadcasted.to = Viesti kuulutettu:\n{0}
+message.hasbeenbroadcast.to = Viesti kuulutettu:\n{0}
 message.user.now.available.to.chat = {0} on nyt linjoilla {1}
 message.user.is.sending.you.a.file = {0} lähettää sinulle tiedoston.
 message.file.transfer.canceled = Tiedoston siirto peruttu.
@@ -466,7 +466,7 @@ message.restart.spark.to.install = Ohjelma täytyy sulkea uuden version asennuks
 message.add.to.roster = Lisää tuttavalistaan
 message.enter.room.password = Anna huoneen salasana
 message.add.contact.to.list = Lisää käyttäjä yhteystiedoihin
-message.autenticating = Tunnistaudutaan
+message.authenticating = Tunnistaudutaan
 message.invalid.status = Anna hyväksyttävä tilaviesti.
 message.cannot.add.contact.to.shared.group = Et voi lisätä uusia henkilöitä jaettuun ryhmään.
 message.specify.contact.jid = Anna yhteystiedon Jabber ID (esim. ddman@jabber.org)
@@ -620,7 +620,7 @@ title.client.logs = Työasemalogit
 title.bookmarks = Kirjanmerkit
 title.advanced.connection.usesso = Käytä kertakirjautumista (SSO) GSSAPI:n kautta
 title.delete.file = Halutatko todella poistaa tiedoston?
-title.error.couldnt.open.file = Tiedoston avaus ei onnistu
+title.error.couldnot.open.file = Tiedoston avaus ei onnistu
 title.error.delete.file = Tiedoston poisto ei onnistu
 title.error.find.app = Sovellusta ei löytynyt
 title.error.rename.file = Tiedoston nimen muutos ei onnistu
@@ -737,7 +737,7 @@ menuitem.refresh = Päivitä
 menuitem.create.room = Luo tai liity huoneeseen
 menuitem.expand.all.groups = Laajenna kaikki ryhmät
 menuitem.collapse.all.groups = Tiivistä kaikki ryhmät
-menuitem.inivite.again = Kutsu uudelleen
+menuitem.invite.again = Kutsu uudelleen
 menuitem.chatframe.option = Valinnat
 
 tree.conference.services = Keskustelupalvelut
