--- a/core/src/main/resources/i18n/spark_i18n_fr.properties
+++ b/core/src/main/resources/i18n/spark_i18n_fr.properties
@@ -43,7 +43,7 @@
 ## May 2014
 
 accept = Accepter
-active = Actif
+is.active = Actif
 add = Ajouter
 administrator = Administrateur
 apply = Appliquer
@@ -160,7 +160,7 @@ checkbox.private.room = Salon de Discussion Privé
 checkbox.reconnect.panel.big = Afficher en tant que panneau
 checkbox.reconnect.panel.icon = Afficher en tant qu'icône
 checkbox.reconnect.panel.small = Afficher dans le groupe de contact
-checkbox.reconnet.info = Indiquez le type d'affichage à utiliser pour la reconnexion:
+checkbox.reconnect.info = Indiquez le type d'affichage à utiliser pour la reconnexion:
 checkbox.save.password = &Enregistrer le Mot de Passe
 checkbox.show.avatars.in.contactlist = Afficher les &avatars
 checkbox.show.notifications.in.conference = &Afficher les Notifications en Conférence
@@ -371,7 +371,7 @@ menuitem.grant.moderator = Rendre Modérateur
 menuitem.grant.voice = Voice
 menuitem.help = Aide
 menuitem.hide = Cacher
-menuitem.inivite.again = Inviter de nouveau
+menuitem.invite.again = Inviter de nouveau
 menuitem.invite.group.to.conference = Inviter le groupe à cette conférence
 menuitem.invite.users = Inviter Utilisateurs
 menuitem.join.on.startup = Rejoindre au Démarrage
@@ -444,7 +444,7 @@ message.add.user = Ajouter cet utilisateur a vos Contacts?
 message.alert.notify = Notification d'alerte
 message.already.exists = Un compte existe déja avec ce nom d'utilisateur. Veuillez réessayer.
 message.approve.subscription = Permettre à {0} de vous ajouter à ses Contacts?
-message.autenticating = Vérification en cours
+message.authenticating = Vérification en cours
 message.away.idle = Pas là... (mise en veille)
 message.bookmark.temporary.room.error = Impossible d'ajouter un Salon Temporaire à vos favoris.
 message.broadcast.from = Message groupé de {0}
@@ -452,7 +452,7 @@ message.broadcast.message.sent = Le message groupé a été envoyé.
 message.broadcast.no.text = SVP entrez le texte à diffuser
 message.broadcast.no.user.selected = SVP sélectionner au moins un destinataire
 message.broadcast.to = Entrez le message groupé à {0}
-message.broadcasted.to = Le message groupé a été envoyé aux utilisateurs suivants\: \n{0}
+message.hasbeenbroadcast.to = Le message groupé a été envoyé aux utilisateurs suivants\: \n{0}
 message.buzz.alert.notification = Solliciter l'attention
 message.buzz.message = {0} veut votre attention
 message.buzz.sent = La notification d'alerte a bien été envoyée à l'utilisateur
@@ -672,7 +672,7 @@ message.your.voice.granted = Vous avez la parole dans cette discussion
 message.your.voice.revoked = Vos droits Voice ont été révoqués.
 
 ##Settings for the privacy plugin
-pricacy.tooltip.preferences = Paramètres de confidentialité
+privacy.tooltip.preferences = Paramètres de confidentialité
 privacy.border.block = Bloquer
 privacy.border.information = Informations
 privacy.button.no.list.selected = Pas de liste séléctionnée
@@ -787,7 +787,7 @@ title.edit.custom.message = Editer les messages personnalisés
 title.edit.profile = Editer Profil
 title.enter.reason = Donnez une raison
 title.error = Erreur
-title.error.couldnt.open.file = Impossible d'ouvrir le fichier
+title.error.couldnot.open.file = Impossible d'ouvrir le fichier
 title.error.delete.file = Impossible d'effacer le fichier
 title.error.find.app = Impossible de trouver l'application correspondante
 title.error.rename.file = Impossible de renommer le fichier
