--- a/core/src/main/resources/i18n/spark_i18n_it.properties
+++ b/core/src/main/resources/i18n/spark_i18n_it.properties
@@ -26,7 +26,7 @@
 ## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
 
 accept = Accetta
-active = Attiva
+is.active = Attiva
 add = Aggiungi
 administrator = Amministratore
 apply= Applica
@@ -133,7 +133,7 @@ checkbox.graying.out = Nascondi i contatti in pausa (richiede riavvio)
 checkbox.idle.enabled = &Rileva Inattività
 checkbox.launch.on.startup = &Esegui all'avvio
 checkbox.login.as.invisible = L&ogin invisibile
-checkbox.reconnet.info = Specifica la schermata di riconnessione:
+checkbox.reconnect.info = Specifica la schermata di riconnessione:
 checkbox.reconnect.panel.big = Mostra come pannello
 checkbox.reconnect.panel.small = Mostra nel gruppo dei contatti
 checkbox.reconnect.panel.icon = Mostra come icona
@@ -414,7 +414,7 @@ menuitem.refresh = Aggiorna
 menuitem.create.room = Crea o unisci stanza
 menuitem.expand.all.groups = Espandi tutti i gruppi
 menuitem.collapse.all.groups = Collassa tutti i gruppi
-menuitem.inivite.again = Invita di nuovo
+menuitem.invite.again = Invita di nuovo
 menuitem.chatframe.option = Opzioni
 menuitem.add.groupchat.invitetobookmark = Invita automaticamente gli utenti nella stanza memorizzata
 
@@ -432,7 +432,7 @@ message.add.user = Aggiungi l'utente nel tuo elenco?
 message.alert.notify = Richiesta attenzione
 message.already.exists = Account già esistente, indicare un nome diverso.
 message.approve.subscription = Consenti a {0} di inserirti nel proprio elenco?
-message.autenticating = Autenticazione in corso
+message.authenticating = Autenticazione in corso
 message.away.idle = L'utente è assente per inattività.
 message.bookmark.temporary.room.error = Impossibile rendere preferita una stanza temporanea
 message.broadcast.from = Messaggio broadcast da {0}
@@ -440,7 +440,7 @@ message.broadcast.no.user.selected = Prego selezionare almeno un destinatario
 message.broadcast.no.text = Prego inserire il testo da diffondere
 message.broadcast.message.sent = Il messaggio broadcast è stato inviato.
 message.broadcast.to = Digitare il messaggio broadcast da inviare a {0}
-message.broadcasted.to = Il messaggio broadcast è stato inviato ai seguenti utenti:\n{0}
+message.hasbeenbroadcast.to = Il messaggio broadcast è stato inviato ai seguenti utenti:\n{0}
 message.buzz.alert.notification = Ottieni l'attenzione dell'utente.
 message.buzz.message = {0} richiede la tua attenzione
 message.buzz.sent = Invia una notifica all'utente.
@@ -751,7 +751,7 @@ title.edit.custom.message = Modifica Messaggi Personalizzati
 title.edit.profile = Modifica le Informazioni del profilo
 title.enter.reason = Inserisci Motivazione
 title.error = Errore
-title.error.couldnt.open.file = Impossibile aprire il file
+title.error.couldnot.open.file = Impossibile aprire il file
 title.error.delete.file = Impossibile cancellare file
 title.error.find.app = Impossibile trovare l''applicazione corrispondente
 title.error.rename.file = Impossibile rinominare file
@@ -875,7 +875,7 @@ privacy.border.information = Informazioni sulla privacy
 privacy.label.information = Utilizza il tasto destro del mouse per aggiungere o cancellare liste od oggetti
 privacy.root.node = Liste di privacy
 privacy.label.preferences = Plugin di privacy
-pricacy.tooltip.preferences = Impostazioni di privacy di Spark
+privacy.tooltip.preferences = Impostazioni di privacy di Spark
 privacy.label.list.is.active = Lista attiva:
 privacy.label.list.is.default = Lista di default:
 privacy.border.block = Blocca
