--- a/core/src/main/resources/i18n/spark_i18n_ja.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ja.properties
@@ -44,7 +44,7 @@ reject = 拒絶
 open = 開く
 open.folder = フォルダを開く
 retry = リトライ
-active = アクティブ
+is.active = アクティブ
 not.registered = 登録していない
 save = 保存
 yes = はい
@@ -323,7 +323,7 @@ message.broadcast.from = {0}からブロードキャストされました。
 message.enter.message.to.broadcast = 名簿一覧へのブロードキャストメッセージを入力してください。
 message.broadcast.message.sent = ブロードキャストメッセージは送信されました。
 message.broadcast.to = {0}へのブロードキャストメッセージを入力してください。
-message.broadcasted.to = メッセージは以下のユーザにブロードキャストされました。\n{0}
+message.hasbeenbroadcast.to = メッセージは以下のユーザにブロードキャストされました。\n{0}
 message.user.now.available.to.chat = {0}は{1}でオンライン中
 message.user.is.sending.you.a.file = {0}はファイルをあなたに送信しています。
 message.file.transfer.canceled = ファイル転送をキャンセルしました。
@@ -387,7 +387,7 @@ message.restart.spark.to.install = 最新版のソフトウエアをインスト
 message.add.to.roster = 名簿に追加
 message.enter.room.password = ルームのパスワードを入力してください。
 message.add.contact.to.list = あなたの連絡先にユーザを追加しました。
-message.autenticating = ログイン中
+message.authenticating = ログイン中
 message.invalid.status = ステータスメッセージの入力が不正です。
 message.cannot.add.contact.to.shared.group = 共有グループへの連絡先の追加が出来ませんでした。
 message.specify.contact.jid = コンタクトする JID を指定してください。 (例 ddman@jabber.org)
