--- a/core/src/main/resources/i18n/spark_i18n_ko.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ko.properties
@@ -26,7 +26,7 @@
 ## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
 
 accept = 수락
-active = 활성화
+is.active = 활성화
 add = 추가
 answer = 대답
 apply = 적용
@@ -323,6 +323,7 @@ menuitem.hide = 숨기기
 menuitem.invite.group.to.conference = 회의에 그룹 초대
 menuitem.invite.users = 친구 초대하기
 menuitem.join.on.startup = 시작시 참여하기
+# TODO: Sort out with duplicates
 menuitem.join.room = 대화방 참여
 menuitem.kick.user = 사용자 내보내기
 menuitem.languages = 언어
@@ -378,7 +379,7 @@ menuitem.refresh = 새로하기
 menuitem.create.room = 대화방 생성/참여
 menuitem.expand.all.groups = 모든 그룹 펼쳐 보이기
 menuitem.collapse.all.groups = 모든 그룹 닫기
-menuitem.inivite.again = 다시 초대
+menuitem.invite.again = 다시 초대
 menuitem.chatframe.option = 옵션
 
 message.invite.to.groupchat = {0} 가 당신을 그룹대화에 초대하였습니다.
@@ -396,13 +397,13 @@ message.add.user = 친구를 추가하시겠습니까?
 message.alert.notify = 알림 메시지
 message.already.exists = 계정이 이미 존재합니다. 다른 ID로 입력하세요
 message.approve.subscription = 상대방 {0}의 주소록에 추가하는 것을 허락하십니까?
-message.autenticating = 로그인중입니다.
+message.authenticating = 로그인중입니다.
 message.away.idle = 장시간 자리 비움
 message.bookmark.temporary.room.error = 임시방을 북마크할수 없습니다.
 message.broadcast.from = {0}로부터 온 전체알림
 message.broadcast.message.sent = 전체 알림 메시지를 보냈음
 message.broadcast.to = {0}에게 보낼 전체알림 메시지를 입력하세요
-message.broadcasted.to = 이 메시지는 다음 사용자에게 전체알림되었음:\n{0}
+message.hasbeenbroadcast.to = 이 메시지는 다음 사용자에게 전체알림되었음:\n{0}
 message.buzz.alert.notification = 상대의 채팅창을 흔듭니다.
 message.buzz.sent = 상대방에게 주목 메시지를 보냈습니다.
 message.calling = {0}에게 전화중...
@@ -682,7 +683,7 @@ title.edit.custom.message = 사용자 메시지 편집
 title.edit.profile = 프로필 정보 편집
 title.enter.reason = 메시지 입력
 title.error = 에러
-title.error.couldnt.open.file = 파일을 열수 없습니다. 알려지지 않은 파일 형식입니다.
+title.error.couldnot.open.file = 파일을 열수 없습니다. 알려지지 않은 파일 형식입니다.
 title.error.delete.file = 파일 삭제할수 없습니다!
 title.error.find.app = 어플리케이션과 매칭할 파일을 찾을수 없습니다.
 title.error.rename.file = 파일명 변경할수 없습니다.!
