--- a/core/src/main/resources/i18n/spark_i18n_ky.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ky.properties
@@ -33,7 +33,7 @@ action.paste=Коюу
 action.print=Басмалоо
 action.save=Сактоо
 action.select.all=Бардыгын тандоо
-active= Активдүү
+is.active= Активдүү
 add= Кошуу
 answer=Жооп берүү
 apply=Аткаруу
@@ -287,7 +287,7 @@ menuitem.grant.moderator= Модератор укуктарын берүү
 menuitem.grant.voice= Сүйлөө укугун берүү
 menuitem.help= Жардам
 menuitem.hide=Жашыруу
-menuitem.inivite.again=Кайрадан чакыруу
+menuitem.invite.again=Кайрадан чакыруу
 menuitem.invite.group.to.conference=Группаны конференцияга чакыруу
 menuitem.invite.users= Колдонуучуларды чакыруу
 menuitem.join.on.startup= Жүктөлүүдө кирүү
@@ -355,13 +355,13 @@ message.add.user=Колдонуучу контакт тизмеге кошулс
 message.alert.notify=Эскертүү
 message.already.exists=Мындай колдонуучу аты алда качан бар. Башка колдонуучу атын колдонуп көрүңүз.
 message.approve.subscription= {0} сизди алардын контакт тизмесине кошууга уруксат бересизби?
-message.autenticating= Аутентификация
+message.authenticating= Аутентификация
 message.away.idle=«Орунда эмес» (Колдонулбай калгандыгынан)
 message.bookmark.temporary.room.error=Убактылуу бөлмөлөрдү эсбелгилерге кошо албайсыз
 message.broadcast.from= Кабарлама {0} атынан
 message.broadcast.message.sent=Көптүк кабарлама жөнөтүлдүү.
 message.broadcast.to={0} жөнөтүүлүчү текстти кириңиз
-message.broadcasted.to=Көптүк кабарлама төмөнкү колдонуучуларга жөнөтүлдү:
+message.hasbeenbroadcast.to=Көптүк кабарлама төмөнкү колдонуучуларга жөнөтүлдү:
 message.buzz.alert.notification= Get the user's attention.
 message.buzz.sent= Колдонуучуну «ойготуу»
 message.calling= {0} чалып жатат
@@ -651,7 +651,7 @@ title.edit.custom.message=Жөнөкөй статустарды ондоо
 title.edit.profile=Профилди ондоо
 title.enter.reason=Себепти кириңиз
 title.error=Ката
-title.error.couldnt.open.file=Файл ачылган жок! Балким файл тиби белгисиз!
+title.error.couldnot.open.file=Файл ачылган жок! Балким файл тиби белгисиз!
 title.error.delete.file=Файл өчүрүлгөн жок!
 title.error.find.app=Туш келген программа табылган жок!
 title.error.rename.file=Файлдын аты алмаштырылган жок!
