--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -26,7 +26,7 @@
 ## quote the "{" (curly brace) if necessary. A real single quote is represented by ''.
 
 accept = Priimti
-active = Aktyvu
+is.active = Aktyvu
 add = Pridėti
 administrator = Administratorius
 answer = Atsakymas
@@ -143,7 +143,7 @@ checkbox.enable.emoticons = &Rodyti jaustukus
 checkbox.graying.out = Užpilkinti neaktyvius adresatus (reikalingas perkrovimas)
 checkbox.idle.enabled = Įjungti neveikos rodymą
 checkbox.launch.on.startup = Paleisti startavus
-checkbox.reconnet.info = Nurodyti pakartotino prisijungimo rodymą:
+checkbox.reconnect.info = Nurodyti pakartotino prisijungimo rodymą:
 checkbox.reconnect.panel.big = Rodyti kaip Panelę
 checkbox.reconnect.panel.small = Rodyti adresatų grupėje
 checkbox.reconnect.panel.icon = Rodyti kaip ikoną
@@ -454,7 +454,7 @@ menuitem.refresh = Atnaujinti
 menuitem.create.room = Sukurti arba aplankyti pokalbių kambarį
 menuitem.expand.all.groups = Visų grupių išskleidimas
 menuitem.collapse.all.groups = Visų grupių sutraukimas
-menuitem.inivite.again = Vėl pakviesti
+menuitem.invite.again = Vėl pakviesti
 menuitem.chatframe.option = Parinktys
 menuitem.add.groupchat.invitetobookmark = Automatiškai kviesti vartotojus į pažymėtą kambarį
 menuitem.certificate.files.filter = Sertifikatų bylos (*.cer), (*.crt), (*.der)
@@ -474,7 +474,7 @@ message.add.user = Ar pridėti abonentą į sąrašą?
 message.alert.notify = Įspėjimas
 message.already.exists = Tokia paskyra jau yra. Pabandykite kitą vardą.
 message.approve.subscription = Ar Leisite abonentui {0} Jus įtraukti į jo adresinę?
-message.autenticating = Autentifikavimas
+message.authenticating = Autentifikavimas
 message.away.idle = Neaktyvus
 message.bookmark.temporary.room.error = Laikini kambariai negali būti pasižymimi.
 message.broadcast.from = Žinią transliavo {0}
@@ -482,7 +482,7 @@ message.broadcast.no.user.selected = Prašom pasirinkti bent vieną adresatą
 message.broadcast.no.text = Prašom įvesti žinutę transliavimui
 message.broadcast.message.sent = Transliuota žinia jau išsiųsta
 message.broadcast.to = Įveskite ką transliuosite gavėjams {0}
-message.broadcasted.to = Transliavote šiems abonentams:\n {0}
+message.hasbeenbroadcast.to = Transliavote šiems abonentams:\n {0}
 message.buzz.alert.notification = Atkreipti dėmesį
 message.buzz.message = {0} nori jūsų dėmesio
 message.buzz.sent = Nusiųsti abonentui iškvietimą
@@ -644,7 +644,7 @@ message.server.unavailable = Nepavyksta prisijungti prie serverio. Gal neteising
 message.service.already.exists = Paslauga jau yra.
 message.shared.group = Bendrinta grupė
 message.spark.secure = Saugioji Spark veiksena.
-message.spark.unsecure = Nesaugioji Spark veiksena (ryšis su serveriu nešifruotas).
+message.spark.insecure = Nesaugioji Spark veiksena (ryšis su serveriu nešifruotas).
 message.specify.contact.jid = Prašom nurodyti abonento „JID“ (pvz. vardenis@jabber.org).
 message.specify.group = Nurodykite adresų grupę, į kurią įtrauksim naują abonentą.
 message.specify.information.for.conference = Nurodykite informaciją apie konferencijų kambarį.
@@ -796,7 +796,7 @@ title.edit.custom.message = Susikurtų būsenų redagavimas
 title.edit.profile = Profilio informacijos redagavimas
 title.enter.reason = Priežasties įvedimas
 title.error = Klaida
-title.error.couldnt.open.file = Nepavyko atverti bylos! Patikrinkite ar teisingas bylos tipas.
+title.error.couldnot.open.file = Nepavyko atverti bylos! Patikrinkite ar teisingas bylos tipas.
 title.error.delete.file = Nepavyko pašalinti bylos!
 title.error.find.app = Nepavyko rasti tinkamos programos!
 title.error.rename.file = Nepavyko pakeisti bylos vardo!
@@ -923,7 +923,7 @@ privacy.border.information = Privatumo informacija
 privacy.label.information = Naudokite dešinio paspaudimo meniu, kad pridėti ar ištrinti sąrašus ar punktus
 privacy.root.node = Privatumo sąrašai
 privacy.label.preferences = Privatumo įskiepis
-pricacy.tooltip.preferences = Sparko privatumo nustatymai
+privacy.tooltip.preferences = Sparko privatumo nustatymai
 privacy.label.list.is.active = AKTYVUS
 privacy.label.list.is.default = NUMATYTASIS
 privacy.border.block = Blokuoti
@@ -968,7 +968,7 @@ dialog.certificate.sure.to.delete = Ar tikrai norite ištrinti šį sertifikatą
 dialog.certificate.has.been.deleted = Sertifikatas sėkmingai ištrintas.
 dialog.self.signed.certificate.has.been.created = Paties pasirašytas sertifikatas ir privatus raktas buvo sukurti direktorijoje:
 dialog.certificate.request.has.been.created = Sertifikato pasirašymo užklausa ir privatus raktas buvo sukurti direktorijoje:
-dialog.cannot.upload.certificate.might.be.ill.formated = Neįmanoma įkelti sertifikato, sertifikatas gali būti blogai suformuotas
+dialog.cannot.upload.certificate.might.be.ill.formatted = Neįmanoma įkelti sertifikato, sertifikatas gali būti blogai suformuotas
 dialog.cannot.upload.certificate = Neįmanoma įkelti sertifikato bylos
 dialog.certificate.title.certificate.not.in.truststore = Pateiktas sertifikatas nėra jūsų TrusStore
 
