--- a/core/src/main/resources/i18n/spark_i18n_nl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_nl.properties
@@ -29,7 +29,7 @@
 ## R. van Zantvoort, August 2007
 
 accept = Accepteer
-active = Actief
+is.active = Actief
 add = Toevoegen
 answer = Beantwoorden
 available = Beschikbaar
@@ -338,13 +338,13 @@ message.add.user = Gebruiker aan contactlijst toevoegen?
 message.alert.notify = Waarschuwing
 message.already.exists = Account bestaat reeds. Probeer een andere gebruikersnaam.
 message.approve.subscription = Sta {0} toe om mij aan hun rooster toe te voegen?
-message.autenticating = Bezig met authoriseren...
+message.authenticating = Bezig met authoriseren...
 message.away.idle = Afwezig wegens inactiviteit.
 message.bookmark.temporary.room.error = Kan geen bladwijzers maken van tijdelijke ruimtes.
 message.broadcast.from = Bericht van {0}
 message.broadcast.message.sent = Het bericht is verzonden.
 message.broadcast.to = Geef bericht om te versturen aan {0}
-message.broadcasted.to = Het bericht is verstuurd naar de volgende gebruikers:\n{0}
+message.hasbeenbroadcast.to = Het bericht is verstuurd naar de volgende gebruikers:\n{0}
 message.buzz.alert.notification = Vraagt de gebruiker om aandacht.
 message.buzz.sent = Melding naar gebruiker verstuurd.
 message.calling = Belt {0}
