--- a/core/src/main/resources/i18n/spark_i18n_pl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pl.properties
@@ -28,7 +28,7 @@
 ## Tlumaczenie wersji pl stworzyl i na biezaco korektuje TEAM MOPR Bytom (informatycy@mopr.bytom.pl) - korekty mile widziane ;)
 
 accept = Akceptuj
-active = Aktywny
+is.active = Aktywny
 add = Dodaj
 administrator = Administrator
 answer = Odpowiedz
@@ -143,7 +143,7 @@ checkbox.enable.emoticons = Włącz emotikony
 checkbox.graying.out = Przyciemnij bezczynne kontakty (wymaga restartu)
 checkbox.idle.enabled = Włącz opcję Zaraz wracam
 checkbox.launch.on.startup = Uruchom przy starcie systemu
-checkbox.reconnet.info = Określenie wyświetlania ponownego połączenia
+checkbox.reconnect.info = Określenie wyświetlania ponownego połączenia
 checkbox.reconnect.panel.big = Wyświetl jako panel
 checkbox.reconnect.panel.small = Wyświetl w grupie kontaktów
 checkbox.reconnect.panel.icon = Wyświetl jako ikona
@@ -454,7 +454,7 @@ menuitem.refresh = Odśwież
 menuitem.create.room = Stwórz lub dołącz do pokoju
 menuitem.expand.all.groups = Rozwiń wszystkie grupy
 menuitem.collapse.all.groups = Zwiń wszystkie grupy
-menuitem.inivite.again = Zaproś ponownie
+menuitem.invite.again = Zaproś ponownie
 menuitem.chatframe.option = Opcje
 menuitem.add.groupchat.invitetobookmark = Automatycznie zaproś użytkowników do zaznaczonego pokoju
 menuitem.certificate.files.filter = Pliki certyfikatów (*.cer), (*.crt), (*.der)
@@ -473,7 +473,7 @@ message.add.user = Dodać do grupy kontaktów?
 message.alert.notify = Powiadomienie alarmowe
 message.already.exists = Konto już istnieje, użyj innej nazwy użytkownika
 message.approve.subscription = Czy zezwolić {0} na dodanie Ciebie do jej/jego grupy kontaktów?
-message.autenticating = Uwierzytelnianie
+message.authenticating = Uwierzytelnianie
 message.away.idle = Zaraz wracam
 message.bookmark.temporary.room.error = Nie możesz dodawać tymczasowych pokoi do ulubionych
 message.broadcast.from = Wiadomość grupowa od {0}
@@ -481,7 +481,7 @@ message.broadcast.no.user.selected = Proszę wybierz przynajmniej jednego odbior
 message.broadcast.no.text = Proszę wprowadź tekst dla wiadomości grupowej enter text to broadcast
 message.broadcast.message.sent = Wiadomość grupowa została wysłana
 message.broadcast.to = Wpisz wiadomość i wyślij do {0}
-message.broadcasted.to = Wiadomość została wysłana do następujących użytkowników\:\n{0}
+message.hasbeenbroadcast.to = Wiadomość została wysłana do następujących użytkowników\:\n{0}
 message.buzz.alert.notification = Zwróć uwagę użytkownika
 message.buzz.message = {0} chce zwrócić Twoją uwagę
 message.buzz.sent = Wyślij alert do użytkownika
@@ -647,7 +647,7 @@ message.server.unavailable = Nie można połączyć z serwerem: nieprawidłowa n
 message.service.already.exists = Usługa znajduje się już na liście
 message.shared.group = Grupa współdzielona
 message.spark.secure = Spark działa w trybie bezpiecznym
-message.spark.unsecure = Spark nie działa w trybie bezpiecznym (połączenie z serwerem nie jest szyfrowane).
+message.spark.insecure = Spark nie działa w trybie bezpiecznym (połączenie z serwerem nie jest szyfrowane).
 message.specify.contact.jid = Proszę podać JID kontaktu (np. ddman@jabber.org)
 message.specify.group = Okreś grupę, do której dodać nowego użytkownika
 message.specify.information.for.conference = Określ informacje o pokoju konferencyjnym
@@ -806,7 +806,7 @@ title.edit.custom.message = Edytuj wiadomości
 title.edit.profile = Edytuj informacje o profilu
 title.enter.reason = Podaj powód
 title.error = Błąd
-title.error.couldnt.open.file = Nie można otworzyć pliku
+title.error.couldnot.open.file = Nie można otworzyć pliku
 title.error.delete.file = Nie można usunąć pliku
 title.error.find.app = Nie można znaleźć odpowiedniej aplikacji
 title.error.rename.file = Nie można zmienić nazwy pliku
@@ -932,7 +932,7 @@ privacy.border.information = Informacje o prywatności
 privacy.label.information = Użyj menu prawego przycisku myszy aby dodać lub usunąć listy lub elementy
 privacy.root.node = Listy prywatności
 privacy.label.preferences = Wtyczka prywatności
-pricacy.tooltip.preferences = Ustawienia prywatności Sparka
+privacy.tooltip.preferences = Ustawienia prywatności Sparka
 privacy.label.list.is.active = AKTYWNA
 privacy.label.list.is.default = DOMYŚLNA
 privacy.border.block = Zablokuj
