--- a/core/src/main/resources/i18n/spark_i18n_pt_BR.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pt_BR.properties
@@ -44,7 +44,7 @@ reject = Rejeitar
 open = Abrir
 open.folder = Abrir pasta
 retry = Repetir
-active = Ativo
+is.active = Ativo
 not.registered = Não registrado
 save = Salvar
 yes = Sim
@@ -109,7 +109,7 @@ checkbox.allow.buzz = Permitir que usuários chamem sua atenção
 checkbox.idle.enabled = &Ausente habilitado
 checkbox.graying.out = Ofuscar contatos ausentes (Necessita reiniciar)
 checkbox.launch.on.startup = &Executar ao iniciar
-checkbox.reconnet.info = Especificar exibição de reconexão:
+checkbox.reconnect.info = Especificar exibição de reconexão:
 checkbox.reconnect.panel.big = Exibir painel
 checkbox.reconnect.panel.small = Exibir como grupo de contato
 checkbox.reconnect.panel.icon = Exibir ícone
@@ -319,7 +319,7 @@ message.broadcast.from = Mensagem em massa de {0}
 message.enter.message.to.broadcast = Entre com a mensagem a ser enviada para toda sua lista de contatos.
 message.broadcast.message.sent = A mensagem foi enviada em massa.
 message.broadcast.to = Entre com a mensagem as ser enviada para {0}
-message.broadcasted.to = A mensagem foi enviada aos seguintes usuários:\n{0}
+message.hasbeenbroadcast.to = A mensagem foi enviada aos seguintes usuários:\n{0}
 message.user.now.available.to.chat = {0} está online as {1}
 message.user.is.sending.you.a.file = {0} está lhe enviando um arquivo.
 message.file.transfer.canceled = Você cancelou a transferência do arquivo.
@@ -657,7 +657,7 @@ menuitem.languages = Traduções
 menuitem.sign.in.at.login = Conectar ao iniciar
 menuitem.sign.out = Sair
 menuitem.user.guide = Guia do usuário
-message.autenticating = Autenticando
+message.authenticating = Autenticando
 message.buzz.alert.notification = Chamar atenção
 message.buzz.sent = Enviar alerta ao usuário.
 message.cannot.add.contact.to.shared.group = Você não pode adicionar contatos a um grupo compartilhado.
@@ -754,7 +754,7 @@ menuitem.refresh = Atualizar
 menuitem.create.room = Criar ou juntar-se a sala
 menuitem.expand.all.groups = Expandir todos os grupos
 menuitem.collapse.all.groups = Recolher todos os grupos
-menuitem.inivite.again = Convidar novamente
+menuitem.invite.again = Convidar novamente
 menuitem.chatframe.option = Opções
 menuitem.add.groupchat.invitetobookmark = Convidar usuários automaticamente para a sala marcada
 message.invite.to.groupchat = {0} está convidando você para juntar-se a um Chat em grupo
@@ -797,7 +797,7 @@ title.bookmarks = Marcadores
 title.add.contact.group = Adicionar grupo de contato
 title.advanced.connection.usesso = Utilizar Single Sign-On (SSO) via GSSAPI
 title.delete.file = Você realmente quer excluir este arquivo?
-title.error.couldnt.open.file = Não foi possível abrir o arquivo
+title.error.couldnot.open.file = Não foi possível abrir o arquivo
 title.error.delete.file = Não foi possível excluir o arquivo
 title.error.find.app = Não foi possível encontrar um aplicativo correspondente
 title.error.rename.file = Não foi possível renomear o arquivo
