--- a/core/src/main/resources/i18n/spark_i18n_sv.properties
+++ b/core/src/main/resources/i18n/spark_i18n_sv.properties
@@ -44,7 +44,7 @@ reject = Avslå
 open = Öppna
 open.folder = Öppna mapp
 retry = Försök igen
-active = Aktiv
+is.active = Aktiv
 not.registered = Ej registrerad
 save = Spara
 yes = Ja
@@ -204,7 +204,7 @@ label.conflict.error = Kan ej logga in då kontot redan är inloggat.
 label.message.style = &Meddelande stil
 label.emoticons = &Känsloikoner
 label.accounts = Konton
-
+# TODO: Sort out with duplicates
 message.username.error = Ange ett användarnamn för kontot.
 message.password.error = Ange ett lösenord för kontot.
 message.confirmation.password.error = Bekräfta lösenordet.
@@ -328,7 +328,7 @@ message.broadcast.from = Broadcast from {0}
 message.enter.message.to.broadcast = Enter message to broadcast to your entire roster list.
 message.broadcast.message.sent = The broadcast message has been sent.
 message.broadcast.to = Enter message to broadcast to {0}
-message.broadcasted.to = The message has been broadcasted to the following users:\n{0}
+message.hasbeenbroadcast.to = The message has been broadcasted to the following users:\n{0}
 message.user.now.available.to.chat = {0} is online at {1}
 message.user.is.sending.you.a.file = {0} is sending you a file.
 message.file.transfer.canceled = You have cancelled the file transfer.
@@ -400,7 +400,7 @@ message.restart.spark.to.install = Du måste avsluta klienten för att \n instal
 message.add.to.roster = Lägg till på användarlista
 message.enter.room.password = Ange lösenord för grupprum
 message.add.contact.to.list = Lägg till användaren på kontaktlista
-message.autenticating = Autentiserar
+message.authenticating = Autentiserar
 message.invalid.status = Ange ett giltigt status meddelande.
 message.cannot.add.contact.to.shared.group = Du kan inte lägga till kontakter på en delad grupp.
 message.specify.contact.jid = Ange ett giltigt JID (ex. user@jabber.org)
