--- a/core/src/main/resources/i18n/spark_i18n_tr.properties
+++ b/core/src/main/resources/i18n/spark_i18n_tr.properties
@@ -29,7 +29,7 @@
 ## Please contact for translation errors and ideas.
 
 accept = Kabul
-active = Aktif
+is.active = Aktif
 add = Ekle
 answer = Cevap
 apply = Uygula
@@ -294,6 +294,7 @@ menuitem.hide = Gizle
 menuitem.invite.group.to.conference = Konferansa grup davet et
 menuitem.invite.users = Kullanıcıları davet et
 menuitem.join.on.startup = Açılışta katıl
+# TODO: Sort out with duplicates
 menuitem.join.room = Odaya katıl
 menuitem.kick.user = Kullanıcıyı dışarı at
 menuitem.languages = Diller
@@ -362,13 +363,13 @@ message.add.user = Kullanıcı listenize eklensin mi?
 message.alert.notify = Alarm uyarısı
 message.already.exists = Hesap zaten mevcut. Lütfen farklı bir kullanıcı adı seçin.
 message.approve.subscription = {0}, sizi listesine ekleyecek, izin veriyor musunuz?
-message.autenticating = Kimlik doğrulanıyor
+message.authenticating = Kimlik doğrulanıyor
 message.away.idle = Uzakta, ilgisiz
 message.bookmark.temporary.room.error = Geçici odaları yer imlerine ekleyemezsiniz.
 message.broadcast.from = {0} tarafından yayın mesajı
 message.broadcast.message.sent = Yayın mesajı gönderildi.
 message.broadcast.to = {0} tarafına gönderilecek mesajı girin.
-message.broadcasted.to = Mesaj şu kullanıcılara yayınlandı::\n{0}
+message.hasbeenbroadcast.to = Mesaj şu kullanıcılara yayınlandı::\n{0}
 message.buzz.alert.notification = Kullanıcıların alarm uyarılarını al.
 message.buzz.sent = Kullanıcıya bir alarm uyarısı gönder.
 message.calling = {0} aranıyor
@@ -636,7 +637,7 @@ title.edit.custom.message = Özel mesajları düzenle
 title.edit.profile = Profil bilgisini düzenle
 title.enter.reason = Nedeni girin
 title.error = Hata
-title.error.couldnt.open.file = Dosya açılamadı, bilinmeyen bir tipte olabilir.
+title.error.couldnot.open.file = Dosya açılamadı, bilinmeyen bir tipte olabilir.
 title.error.delete.file = Dosya silinemedi.
 title.error.find.app = Eşleşen bir uygulama bulunamadı.
 title.error.rename.file = Dosya adı değiştirilemedi.
