--- a/core/src/main/resources/i18n/spark_i18n_zh_CN.properties
+++ b/core/src/main/resources/i18n/spark_i18n_zh_CN.properties
@@ -130,7 +130,7 @@ checkbox.enable.emoticons = (&O) 显示表情
 checkbox.graying.out = 空闲联系人变淡（需要重启）
 checkbox.idle.enabled = (&I) 允许空闲等待
 checkbox.launch.on.startup = (&L) 随系统启动
-checkbox.reconnet.info = 指定重新连接的显示方式：
+checkbox.reconnect.info = 指定重新连接的显示方式：
 checkbox.reconnect.panel.big = 按照面板方式显示
 checkbox.reconnect.panel.small = 按照联系人分组方式显示
 checkbox.reconnect.panel.icon = 按照图标方式显示
@@ -404,7 +404,7 @@ menuitem.refresh = 刷新
 menuitem.create.room = 创建并加入聊天室
 menuitem.expand.all.groups = 展开全部分组
 menuitem.collapse.all.groups = 收起分组
-menuitem.inivite.again = 重新邀请
+menuitem.invite.again = 重新邀请
 menuitem.chatframe.option = 选项
 menuitem.add.groupchat.invitetobookmark = 自动邀请联系人至书签中的聊天室
 message.invite.to.groupchat = {0} 邀请您加入群聊
@@ -422,7 +422,7 @@ message.add.user = 添加用户到你的联系人名单？
 message.alert.notify = 通知
 message.already.exists = 账号已经存在。 请尝试不同的用户名。
 message.approve.subscription = 准许{0}添加你到他们的联系人名单？
-message.autenticating = 验证
+message.authenticating = 验证
 message.away.idle = 空闲显示离开。
 message.bookmark.temporary.room.error = 你不能为临时房间添加书签
 message.broadcast.from = 广播消息来自于{0}
@@ -430,7 +430,7 @@ message.broadcast.no.user.selected = 请至少选择一名接收人
 message.broadcast.no.text = 请输入广播的文字
 message.broadcast.message.sent = 发送了广播消息。
 message.broadcast.to = 发送广播消息至{0}
-message.broadcasted.to = 消息对以下用户广播了:{0}
+message.hasbeenbroadcast.to = 消息对以下用户广播了:{0}
 message.buzz.alert.notification = 获得用户的注意。
 message.buzz.message = {0} 希望得到您的注意
 message.buzz.sent = 发送通知给用户.
@@ -734,7 +734,7 @@ title.edit.custom.message = 编辑用户状态
 title.edit.profile = 编辑简介信息
 title.enter.reason = 输入理由
 title.error = 错误
-title.error.couldnt.open.file = 无法打开文件，未知文件类型！
+title.error.couldnot.open.file = 无法打开文件，未知文件类型！
 title.error.delete.file = 删除文件失败！
 title.error.find.app = 未找到相应的应用程序！
 title.error.rename.file = 未能对文件重命名！
@@ -850,7 +850,7 @@ privacy.border.information = Privacy Information
 privacy.label.information = Use right click menu to add or delete lists or items
 privacy.root.node = Privacy Lists
 privacy.label.preferences = Privacy Plugin
-pricacy.tooltip.preferences = Spark privacy settings
+privacy.tooltip.preferences = Spark privacy settings
 privacy.label.list.is.active = Current active list:
 privacy.label.list.is.default = Default list:
 privacy.border.block = Block
